# smalldiff

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  smalldiff.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: install.sh  test.sh
smalldiff/: __init__.py  encoder.py  main.py
tests/: test_encoder.py  test_smalldiff.py
tests/schema/: __init__.py  pydentic_models.py
